fix layout bug (attempt)

--- a/_sass/_card.sass
+++ b/_sass/_card.sass
@@ -154,6 +154,8 @@
 			img, video
 				max-height: 200px
 				max-width: 100%
+				object-fit: contain
+				min-height: 0
 				border-top-left-radius: 0
 				border-bottom-left-radius: 0
 
